--- a/templates/junstagram/main.html
+++ b/templates/junstagram/main.html
@@ -9,15 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Google Icon-->
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-      rel="stylesheet">
+    
     <title>Hello, world!</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+        <div class="container-fluid" style="justify-content:space-between">
           <a class="navbar-brand" href="#"><img style="width:100px"
              src="https://www.instagram.com/static/images/web/mobile_nav_type_logo-2x.png/1b47f9d0e595.png"></a>
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">        </div>
+          <input class="form-control me-2" style="width: 400px" type="search" placeholder="Search" aria-label="Search"> 
+          <div>
           <span class="material-icons">
             home
             </span>
@@ -30,7 +31,13 @@
           <span class="material-icons-outlined">
             explore
             </span>
-        </nav>
+          <span class="material-icons-outlined">
+            favorite_border
+            </span>
+          </div>
+        </div>
+            </nav>
+        </nav> 
 
 
     <!-- Optional JavaScript; choose one of the two! -->
