--- a/templates/junstagram/main.html
+++ b/templates/junstagram/main.html
@@ -30,8 +30,11 @@
             }
 
             .feed_box {
-                width: 580px;
-                margin: 10px;
+                display:block;
+					width:100%;
+						height:auto;
+			
+					margin: 10px;
                 min-height: auto;
                 padding-bottom: 10px;
             }
@@ -251,7 +254,16 @@
             </div>
 
             <div style="width:400px; height:1000px; position:fixed; left:62%;">
-                오른쪽
+					<div>내프로필</div>
+					<div> 회원님을 위한 추천 모두보기</div>
+					<div>추천 프로필</div>
+					<div>추천 프로필</div>
+					<div>추천 프로필</div>
+					<div>추천 프로필</div>
+					<div>추천 프로필</div>
+					<div>소개 도움말 홍보센터 API</div>
+					<div>2021 인스타그램 프롬 페이스북</div>
+
 
             </div>
         </div>
